Fix spacing and alignment, add exception handling in code instead of HTML.

--- a/Plot/Components/PartialComponents/OptionInput/OptionInput.razor.css
+++ b/Plot/Components/PartialComponents/OptionInput/OptionInput.razor.css
@@ -8,4 +8,5 @@ select
     background: transparent;
     border: none;
     opacity: 50%;
+    margin-left: 0.1rem;
 }
